--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "vue": "^2.1.0"
+    "vue": "^2.1.0",
+    "vue-octicon": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
